// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderPython matches the snapshot for multi-version.json 1`] = `
"# Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
# Requires peer events-sdk-python v0.0.3 or later.

from dataclasses import dataclass, field, fields, is_dataclass
from typing import Any, Dict, List, Optional, Tuple

from hightouch.htevents.client import Client

@dataclass
class TrackOrderCompletedV1:
    orderId: Optional[str] = field(default=None)

@dataclass
class TrackOrderCompletedV2:
    orderId: Optional[str] = field(default=None)
    total: Optional[float] = field(default=None)

def to_value(value: Any) -> Any:
    if is_dataclass(value) and not isinstance(value, type):
        return to_map(value)
    if isinstance(value, dict):
        return {k: to_value(v) for k, v in value.items() if v is not None}
    if isinstance(value, list):
        return [to_value(el) for el in value]
    return value

def to_map(value: Any) -> Dict[str, Any]:
    if value is None:
        return {}
    if is_dataclass(value) and not isinstance(value, type):
        out: Dict[str, Any] = {}
        for item in fields(value):
            nested = getattr(value, item.name)
            if nested is None:
                continue
            key = item.metadata.get("json", item.name)
            out[key] = to_value(nested)
        return out
    if isinstance(value, dict):
        return {k: to_value(v) for k, v in value.items() if v is not None}
    return dict(value)

def set_at_path(root: Dict[str, Any], path: List[str], value: str) -> Dict[str, Any]:
    if len(path) == 0:
        return root
    clone = dict(root)
    cursor = clone
    for key in path[:-1]:
        nxt = cursor.get(key)
        child = dict(nxt) if isinstance(nxt, dict) else {}
        cursor[key] = child
        cursor = child
    cursor[path[-1]] = value
    return clone

def with_schema_version(
    data: Dict[str, Any],
    context: Optional[Dict[str, Any]],
    path: Optional[List[str]],
    version: str,
    envelope_key: str,
) -> Tuple[Dict[str, Any], Optional[Dict[str, Any]]]:
    if path is None or len(path) == 0:
        return data, context
    head, rest = path[0], path[1:]
    if head == envelope_key:
        return set_at_path(dict(data), rest, version), context
    if head == "context":
        ctx = dict(context) if isinstance(context, dict) else {}
        return data, set_at_path(ctx, rest, version)
    return data, context

def track_order_completed_v1(
    client: Client,
    user_id: Optional[str] = None,
    properties: Optional[TrackOrderCompletedV1] = None,
    anonymous_id: Optional[str] = None,
    context: Optional[Dict[str, Any]] = None,
    timestamp: Any = None,
    integrations: Optional[Dict[str, Any]] = None,
) -> None:
    data, ctx = with_schema_version(to_map(properties), context, None, "v1", "properties")
    client.track(
        user_id=user_id,
        event="Order Completed",
        properties=data,
        anonymous_id=anonymous_id,
        context=ctx,
        timestamp=timestamp,
        integrations=integrations,
    )

def track_order_completed_v2(
    client: Client,
    user_id: Optional[str] = None,
    properties: Optional[TrackOrderCompletedV2] = None,
    anonymous_id: Optional[str] = None,
    context: Optional[Dict[str, Any]] = None,
    timestamp: Any = None,
    integrations: Optional[Dict[str, Any]] = None,
) -> None:
    data, ctx = with_schema_version(to_map(properties), context, None, "v2", "properties")
    client.track(
        user_id=user_id,
        event="Order Completed",
        properties=data,
        anonymous_id=anonymous_id,
        context=ctx,
        timestamp=timestamp,
        integrations=integrations,
    )

track_order_completed = track_order_completed_v2
"
`;

exports[`renderPython matches the snapshot for simple-track.json 1`] = `
"# Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
# Requires peer events-sdk-python v0.0.3 or later.

from dataclasses import dataclass, field, fields, is_dataclass
from typing import Any, Dict, List, Optional, Tuple

from hightouch.htevents.client import Client

@dataclass
class TrackOrderCompletedDefault:
    orderId: Optional[str] = field(default=None)
    total: Optional[float] = field(default=None)

def to_value(value: Any) -> Any:
    if is_dataclass(value) and not isinstance(value, type):
        return to_map(value)
    if isinstance(value, dict):
        return {k: to_value(v) for k, v in value.items() if v is not None}
    if isinstance(value, list):
        return [to_value(el) for el in value]
    return value

def to_map(value: Any) -> Dict[str, Any]:
    if value is None:
        return {}
    if is_dataclass(value) and not isinstance(value, type):
        out: Dict[str, Any] = {}
        for item in fields(value):
            nested = getattr(value, item.name)
            if nested is None:
                continue
            key = item.metadata.get("json", item.name)
            out[key] = to_value(nested)
        return out
    if isinstance(value, dict):
        return {k: to_value(v) for k, v in value.items() if v is not None}
    return dict(value)

def set_at_path(root: Dict[str, Any], path: List[str], value: str) -> Dict[str, Any]:
    if len(path) == 0:
        return root
    clone = dict(root)
    cursor = clone
    for key in path[:-1]:
        nxt = cursor.get(key)
        child = dict(nxt) if isinstance(nxt, dict) else {}
        cursor[key] = child
        cursor = child
    cursor[path[-1]] = value
    return clone

def with_schema_version(
    data: Dict[str, Any],
    context: Optional[Dict[str, Any]],
    path: Optional[List[str]],
    version: str,
    envelope_key: str,
) -> Tuple[Dict[str, Any], Optional[Dict[str, Any]]]:
    if path is None or len(path) == 0:
        return data, context
    head, rest = path[0], path[1:]
    if head == envelope_key:
        return set_at_path(dict(data), rest, version), context
    if head == "context":
        ctx = dict(context) if isinstance(context, dict) else {}
        return data, set_at_path(ctx, rest, version)
    return data, context

def track_order_completed_default(
    client: Client,
    user_id: Optional[str] = None,
    properties: Optional[TrackOrderCompletedDefault] = None,
    anonymous_id: Optional[str] = None,
    context: Optional[Dict[str, Any]] = None,
    timestamp: Any = None,
    integrations: Optional[Dict[str, Any]] = None,
) -> None:
    data, ctx = with_schema_version(to_map(properties), context, ["context", "protocols", "schemaVersion"], "default", "properties")
    client.track(
        user_id=user_id,
        event="Order Completed",
        properties=data,
        anonymous_id=anonymous_id,
        context=ctx,
        timestamp=timestamp,
        integrations=integrations,
    )

track_order_completed = track_order_completed_default
"
`;

exports[`renderPython matches the snapshot for with-refs.json 1`] = `
"# Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
# Requires peer events-sdk-python v0.0.3 or later.

from dataclasses import dataclass, field, fields, is_dataclass
from typing import Any, Dict, List, Optional, Tuple

from hightouch.htevents.client import Client

@dataclass
class IdentifyDefault:
    email: Optional[str] = field(default=None)

@dataclass
class TrackCartViewedDefault:
    itemCount: Optional[float] = field(default=None)
    amount: Optional[float] = field(default=None)
    currency: Optional[str] = field(default=None)

def to_value(value: Any) -> Any:
    if is_dataclass(value) and not isinstance(value, type):
        return to_map(value)
    if isinstance(value, dict):
        return {k: to_value(v) for k, v in value.items() if v is not None}
    if isinstance(value, list):
        return [to_value(el) for el in value]
    return value

def to_map(value: Any) -> Dict[str, Any]:
    if value is None:
        return {}
    if is_dataclass(value) and not isinstance(value, type):
        out: Dict[str, Any] = {}
        for item in fields(value):
            nested = getattr(value, item.name)
            if nested is None:
                continue
            key = item.metadata.get("json", item.name)
            out[key] = to_value(nested)
        return out
    if isinstance(value, dict):
        return {k: to_value(v) for k, v in value.items() if v is not None}
    return dict(value)

def set_at_path(root: Dict[str, Any], path: List[str], value: str) -> Dict[str, Any]:
    if len(path) == 0:
        return root
    clone = dict(root)
    cursor = clone
    for key in path[:-1]:
        nxt = cursor.get(key)
        child = dict(nxt) if isinstance(nxt, dict) else {}
        cursor[key] = child
        cursor = child
    cursor[path[-1]] = value
    return clone

def with_schema_version(
    data: Dict[str, Any],
    context: Optional[Dict[str, Any]],
    path: Optional[List[str]],
    version: str,
    envelope_key: str,
) -> Tuple[Dict[str, Any], Optional[Dict[str, Any]]]:
    if path is None or len(path) == 0:
        return data, context
    head, rest = path[0], path[1:]
    if head == envelope_key:
        return set_at_path(dict(data), rest, version), context
    if head == "context":
        ctx = dict(context) if isinstance(context, dict) else {}
        return data, set_at_path(ctx, rest, version)
    return data, context

def identify_default(
    client: Client,
    user_id: Optional[str] = None,
    traits: Optional[IdentifyDefault] = None,
    anonymous_id: Optional[str] = None,
    context: Optional[Dict[str, Any]] = None,
    timestamp: Any = None,
    integrations: Optional[Dict[str, Any]] = None,
) -> None:
    data, ctx = with_schema_version(to_map(traits), context, None, "default", "traits")
    client.identify(
        user_id=user_id,
        traits=data,
        anonymous_id=anonymous_id,
        context=ctx,
        timestamp=timestamp,
        integrations=integrations,
    )

identify = identify_default

def track_cart_viewed_default(
    client: Client,
    user_id: Optional[str] = None,
    properties: Optional[TrackCartViewedDefault] = None,
    anonymous_id: Optional[str] = None,
    context: Optional[Dict[str, Any]] = None,
    timestamp: Any = None,
    integrations: Optional[Dict[str, Any]] = None,
) -> None:
    data, ctx = with_schema_version(to_map(properties), context, None, "default", "properties")
    client.track(
        user_id=user_id,
        event="Cart Viewed",
        properties=data,
        anonymous_id=anonymous_id,
        context=ctx,
        timestamp=timestamp,
        integrations=integrations,
    )

track_cart_viewed = track_cart_viewed_default
"
`;
